--- a/app/src/main/res/layout/dialog_custom_notification.xml
+++ b/app/src/main/res/layout/dialog_custom_notification.xml
@@ -13,7 +13,7 @@
         android:textSize="16sp"
         android:padding="20dp"
         android:textStyle="bold"
-        android:text="@string/custom"/>
+        android:text="@string/custom_reminder"/>
     
     <TextView
         android:layout_width="match_parent"
